tests/suite/fail/generated/stdlib_import/fail_stdlib__fake_module_2.ny.ny
//~ ERROR import not found
import "stdlib/fake_module_2.ny"
fn main() {
    print(0)
}
